--- a/downloads/UniversalUBLoader.html
+++ b/downloads/UniversalUBLoader.html
@@ -2,7 +2,7 @@
 	<head>
         <title>Google Drive - New document</title>
         <link rel="icon" type="image/x-icon" href="https://ssl.gstatic.com/images/branding/product/1x/drive_2020q4_32dp.png">
-        <link rel="stylesheet" href="https://marioispro1.github.io/uniub.github.io//styles.css">
+        <link rel="stylesheet" href="https://marioispro1.github.io/uniub.github.io/styles.css">
     </head>
 	<body>
 		<center>
