--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     </div>
     <hr class="dashedhr">
     <div class="maincontent">
-        <h1 class="padding">Passion project by a goofy soon to be middleschooler who hates school blocks :)</h1>
+        <h1 class="padding">Passion project by a goofy middleschooler who hates school blocks :)</h1>
         <hr class="lighthr">
         <h2 class="padding">nice going admins :)</h2>
         <hr class="lighthr">
