--- a/games.html
+++ b/games.html
@@ -34,6 +34,7 @@
         <h2 class="padding"><a onclick="switchtourl('/gamefiles/mc188')">[WORKING] Minecraft 1.8.8</a></h2> 
 		<h2 class="padding"><a onclick="switchtourl('/gamefiles/slopegame')">[WORKING] Slope Game 3D</a></h2>  
 		<h2 class="padding"><a onclick="switchtourl('/gamefiles/sansbattlesimulator')">[WORKING] Sans Battle Simulator</a></h2>  
+		<h2 class="padding"><a onclick="switchtourl('/gamefiles/snake')">[WORKING] Snake</a></h2>  
         <hr class="lighthr">
         <h2 class="padding">Hey, you've made it to the bottom of the games page! if you can't find a game you want, join the discord and suggest it! ps: games are ordered from top: most recent bottom: least recent</h2>
     </div>
