--- a/games.html
+++ b/games.html
@@ -36,6 +36,7 @@
 		<h2 class="padding"><a onclick="switchtourl('/gamefiles/sansbattlesimulator')">[WORKING] Sans Battle Simulator</a></h2>  
 		<h2 class="padding"><a onclick="switchtourl('/gamefiles/snake')">[WORKING] Snake</a></h2>  
 		<h2 class="padding"><a onclick="switchtourl('/gamefiles/suikagame')">[WORKING] Suika Game</a></h2>  
+		<h2 class="padding"><a onclick="switchtourl('/gamefiles/fnf')">[WORKING] Friday Night Funkin' Week 1-7</a></h2>  
         <hr class="lighthr">
         <h2 class="padding">Hey, you've made it to the bottom of the games page! if you can't find a game you want, join the discord and suggest it! ps: games are ordered from top: most recent bottom: least recent</h2>
     </div>
