--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             <div onclick="switchtourl('/andpdf')" class="app">@PDF OP Unblocker</div>
             <div onclick="switchtourl('/sitecloaker')" class="app">Cloak any website</div>
             <div onclick="switchtourl('/dragexploit')" class="app">Drag Exploit</div>
-            <div onclick="switchtourl('main')" class="app"></div>
+			<div onclick="window.location.href='https://disablesecurly.com'" class="app">Insecurly</div>
             <div onclick="switchtourl('main')" class="app"></div>
         </div>
     </div>
