--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
         <title>Google Drive - New document</title>
         <link rel="icon" type="image/x-icon" href="https://ssl.gstatic.com/images/branding/product/1x/drive_2020q4_32dp.png">
         <link rel="stylesheet" href="styles.css">
+		<meta content="Universal UB for all blockers, original by _jobi_" name="description">
+		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+		<link rel="shortcut icon" href="https://github.githubassets.com/favicons/favicon.png">
     </head>
     <body>
     <div style="width: 100vw;">
