--- a/emulatorsmain.html
+++ b/emulatorsmain.html
@@ -25,6 +25,7 @@
         <hr class="lighthr">
         <h2 class="padding"><a onclick="switchtourl('/emulators/nes/')">[WORKING] NES Emulator</a></h2>
         <h2 class="padding"><a onclick="switchtourl('/emulators/win11/')">[WORKING] Windows 11 Remake (Included Proxy)</a></h2>
+		<h2 class="padding"><a onclick="switchtourl('/emulators/emulatorjs/')">[WORKING] Emulator JS</a></h2>
         <hr class="lighthr">
         <h2 class="padding">Hey, you've made it to the bottom of the emulators page! if you can't find a emulator you want, join the discord and suggest it! ps: emulators are ordered from top: most recent bottom: least recent</h2>
     </div>
