--- a/gamefiles/fnf/index.html
+++ b/gamefiles/fnf/index.html
@@ -70,6 +70,10 @@
 </style>
 </head>
 <body>
+		<script src="../../aboutblank.js"></script>
+		<div style="position: fixed; z-index: 99999999999999999;">
+			<a onclick="switchtourl('/games')"><button style="position: fixed; height: 50px; margin: 0; left: 0;">GO BACK TO GAMES</button></a>
+		</div>
 <a href="/" target="_top" class="neave">
 <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" viewBox="0 0 512 512">
 <path fill="#fff" d="M361 360.95L191 290.5v57.1l-40 16.6V151.05l170 70.3v-57.2l1-.4.1-.05 38.9-15.9"></path>
