--- a/gamefiles/snake/index.html
+++ b/gamefiles/snake/index.html
@@ -69,6 +69,10 @@ if (navigator.onLine && window.location.hostname === 'patorjk.com') {
 </script>
 </head>
 <body>
+		<script src="../../aboutblank.js"></script>
+		<div style="position: fixed; z-index: 99999999999999999;">
+			<a onclick="switchtourl('/games')"><button style="position: fixed; height: 50px; margin: 0; left: 0;">GO BACK TO GAMES</button></a>
+		</div>
     <div class="snake-toolbar">
       <div style="display:inline-block;margin-right:10px;">
         <span>Theme:</span>
