--- a/emulators/emulatorjs/index.html
+++ b/emulators/emulatorjs/index.html
@@ -100,6 +100,10 @@
             <h1>EmulatorJS Demo</h1>
             <img src="docs/Logo-light.png" alt="Logo" class="logo">
         </div>
+		<script src="../../aboutblank.js"></script>
+		<div style="position: fixed; z-index: 99999999999999999;">
+			<a onclick="switchtourl('/games')"><button style="position: fixed; height: 50px; margin: 0; left: 0;">GO BACK TO GAMES</button></a>
+		</div>
         <div id = box>
             <input type = file id = input>
             Drag ROM file or click here
