--- a/gamefiles/doom/index.html
+++ b/gamefiles/doom/index.html
@@ -11,6 +11,10 @@
 </head>
 
 <body>
+		<script src="../../aboutblank.js"></script>
+		<div style="position: fixed; z-index: 99999999999999999;">
+			<a onclick="switchtourl('/games')"><button style="position: fixed; height: 50px; margin: 0; left: 0;">GO BACK TO GAMES</button></a>
+		</div>
     <div class="container">
         <div id="dosbox"></div>
         <button class="wrapper" onclick="dosbox.requestFullScreen();">
