--- a/gamefiles/sansbattlesimulator/index.html
+++ b/gamefiles/sansbattlesimulator/index.html
@@ -45,7 +45,10 @@
  
 <body> 
 	<div id="fb-root"></div>
-	
+			<script src="../../aboutblank.js"></script>
+		<div style="position: fixed; z-index: 99999999999999999;">
+			<a onclick="switchtourl('/games')"><button style="position: fixed; height: 50px; margin: 0; left: 0;">GO BACK TO GAMES</button></a>
+		</div>
 	<script>
 	// Issue a warning if trying to preview an exported project on disk.
 	(function(){
