--- a/emulators/emulatorjs/index.html
+++ b/emulators/emulatorjs/index.html
@@ -102,7 +102,7 @@
         </div>
 		<script src="../../aboutblank.js"></script>
 		<div style="position: fixed; z-index: 99999999999999999;">
-			<a onclick="switchtourl('/games')"><button style="position: fixed; height: 50px; margin: 0; left: 0;">GO BACK TO GAMES</button></a>
+			<a onclick="switchtourl('/emulatorsmain')"><button style="position: fixed; height: 50px; margin: 0; left: 0;">GO BACK TO EMULATORS</button></a>
 		</div>
         <div id = box>
             <input type = file id = input>
